2003-05-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed fontilus. It's now part
	of gnome-control-center.

2003-05-21  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Removed dedit, as suggested by Ole Laursen.

2003-05-20  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: One new gnome-spell release, one new pot name.

2003-05-20  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Changed anjuta branch on Naba's request.

2003-05-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added drwright.

2003-05-17  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Added gtksourceview.

2003-05-16  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fix pot name for gtkhtml HEAD. gtkhtml is
	  not core software in GNOME 1.4.

2003-05-16  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Gaby has been ported to GTK2 long time ago.
	Fix po name for gtkhtml in GNOME 1.4, and gal HEAD.

2003-05-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed themus. It's now part
	of gnome-control-center.

2003-05-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added sound-juicer.

2003-05-13  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: bonobo-activation removed from GNOME 2.4.
	  (it is merged into libbonobo HEAD)

2003-05-09  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Move gnome-chess to GNOME 2.4, it has
	  started porting to gtk2. Eog is not core software in GNOME 1.4.
	  (is it possible to fix the duplicated group name IDs?)

2003-05-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-themes-extras.

2003-05-06  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Fixed the gedit's .pot name for GNOME 2.2

2003-05-03  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Fixed the gdl group for GNOME 1.4 (perhaps