@@ -689,6 +689,17 @@
       </component>
     </version>
   </module>
+  <module name="genius">
+    <version release="gnome-2.4">
+      <component name="genius" dir="genius" group="extras">
+	<podir dir="po"/>
+	<potname name="genius.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gernel">
     <version release="gnome-1.4">
       <component name="gernel" dir="gernel" group="extras">
