@@ -1,3 +1,7 @@
+2003-05-29  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added genius.
+
 2003-05-23  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Removed fontilus. It's now part
